fjord-compiler/test/errors/Sharing.fj
module codegen.expressions.Sharing

useSharedInt : Int -> Int -> Int
useSharedInt x y =
  y

shareInt : Int -> Int
shareInt x =
  useSharedInt x x

myInt : Int
myInt = shareInt 5
